Fix some layout issues

--- a/resources/style/style.less
+++ b/resources/style/style.less
@@ -128,7 +128,7 @@
 	
 
 	.overlay {
-		position: fixed;
+		position: absolute;
 		background-color: #FFF;
 		padding: 10px;
 		border: 1px #CCC solid;
@@ -137,6 +137,9 @@
 		display: none;
 		font-size: 9pt;
 		z-index: 5000;
+		top: 0px;
+		left: 0px;
+		margin: 0px;
 
 		h3 {
 			margin: 0px auto;
@@ -169,7 +172,19 @@
 		width: 200px;
 	}
 
+	#c4sa_seats_container:before,
+	#c4sa_seats_container:after {
+		content:"";
+		display:table;
+	}
+	#c4sa_seats_container:after {
+		clear:both;
+	}
 	#c4sa_seats_container {
+		zoom:1; /* For IE 6/7 (trigger hasLayout) */
+	}
+	#c4sa_seats_container {
+
 		.seat {
 			width: 10px;
 			height: 10px;
